--- a/src/scss/components/_actividad-detalle.scss
+++ b/src/scss/components/_actividad-detalle.scss
@@ -107,6 +107,7 @@
             position: absolute;
             bottom: 10px;
             width: 100%;
+            padding: 0;
 
             .carousel__pagination-item{
                 .carousel__pagination-button{
