--- a/src/scss/components/_actividades-relacionadas.scss
+++ b/src/scss/components/_actividades-relacionadas.scss
@@ -40,7 +40,7 @@
             top: 107px;
 
             .carousel__icon{
-                -webkit-filter: invert(100%); /* Safari/Chrome */
+                -webkit-filter: invert(100%); 
                 filter: invert(100%);
             }
         }
